Fix header on mobile view using some complicated css trickery

--- a/app/assets/stylesheets/administrate/application.scss
+++ b/app/assets/stylesheets/administrate/application.scss
@@ -47,7 +47,7 @@ body {
 .search{border-bottom:0px;margin-top:-10px;    background: #fff;}
 .search__input{font-family:"Varela Round";font-size:17px;}
 .search__clear a {color:#555459;}
-.no-desktop{display:none;}
+.no-desktop, .no-desktop-search{display:none;}
 
 #admin-header{    position: fixed;
     display: block;
@@ -223,10 +223,15 @@ body {
     box-shadow: 0px 3px 0px 0px #228e62;
 }
 
+@media(max-width:991px) {
+	.no-mobile-search{display:none;}
+	.no-desktop-search{display:block;margin: 20px 0px; }
+	.remove-small-mobile{width:0%;}
+	.search{margin: 20px 0px;    border: 1px solid #dfe2e1;}
+}
 
 @media(max-width:768px) {
 	.no-mobile{display:none;}
 	.no-desktop{display:block;}
-	.search{margin: 20px 0px;    border: 1px solid #dfe2e1;}
 }
 
